[tool.poetry]
name = "class-final-project"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"
streamlit = "^1.44.0"
pymongo = "^4.11.3"
ipython = "^9.0.2"
flask = "^3.1.0"
jupyterlab = "^4.3.6"
matplotlib = "^3.10.1"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
